chore: fix scrollbar color & coming soon text

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,7 +54,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(90, 90, 90);
+  background: #50505075;
   border-radius: 5px;
 }
 
